--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,22 @@ repositories {
         url 'https://clasweb.jlab.org/clas12maven/'
     }
     mavenCentral()
+/*
+ gradle's not finding the local, third-party libs included in the
+ maven repo's jevio-6.2-jar-with-dependencies.  Do we have to
+ deploy maven repositories for all of jevio's dependencies?  Can
+ gradle not find them in the uber jar?
+ -- Meanwhile, kludge: build jevio locally (with maven) first, then
+ let gradle look in local repo:
+*/
+    mavenLocal()
 }
 
 
 dependencies {
     compileOnly 'org.jlab.coda:jclara:4.3-SNAPSHOT'
-    compile 'org.jlab.jnp:jnp-hipo:1.1-SNAPSHOT'
-    compile 'org.jlab.coda:jevio:6.1-SNAPSHOT'
+    compile 'org.jlab.jnp:jnp-hipo:2.0-SNAPSHOT'
+    compile 'org.jlab.coda:jevio:6.2-SNAPSHOT'
     compile 'org.json:json:20160810'
     compileOnly 'com.google.code.findbugs:findbugs-annotations:3.0.1'
     deployerJars 'org.apache.maven.wagon:wagon-ssh-external:2.12'
